Set overflow: hidden on items, fixed the gradient background on long pages.

--- a/styles/results.css
+++ b/styles/results.css
@@ -10,6 +10,8 @@ Author: Robert Tilt, Jake Bresnehan, Nathaniel Burgess, John Cobb, Matthew Platt
 body {
     background: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(#D9D9D9));
     background: -moz-linear-gradient(top,  #FFF,  #D9D9D9);
+    background-color: #d9d9d9;
+    background-repeat: repeat-x;
 }
 #container {
     width: 90%;
@@ -56,6 +58,8 @@ body {
     padding: 8px;
     background-repeat: no-repeat;
     background-position: 5px 5px;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 .displayBox p {
     margin: 0;
@@ -149,7 +153,8 @@ body {
     max-height: 800px;
     max-width: 800px;
     position: relative;
-
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 .modal .modalClose{
